2010-05-31  Atsushi Enomoto  <atsushi@ximian.com>

	* SerializationMap.cs, KnownTypeCollection.cs : contract namespace
	  should be still considered even if contract (local) name is null.
	  Fix crash for generic derived type of dictionary. Fixed the
	  primary (crasher) part of bug #610036.

2010-05-19  Atsushi Enomoto  <atsushi@ximian.com>

	* XmlFormatterDeserializer.cs : Array of something with non-default
	  namespace should be deserialized as well. Required for fixing
	  PeerResolvers ResolveResponseInfo serialization test case.

2010-05-19  Andreia Gaita  <avidigal@novell.com>

	* SerializationMap.cs: when deserializing, it is possible that the
	DataMemberInfo objects being matched against the xml don't have
	a set namespace because they were created from
	DefaultTypeMap.GetDataMembers(), so only use the namespace for
	comparison if it's not null (fixes part of #599667)

2010-04-28  Atsushi Enomoto  <atsushi@ximian.com>

	* KnownTypeCollection.cs : support DataContractNamespaceAttribute.
	  Fixed bug #599889.

2010-04-05  Atsushi Enomoto  <atsushi@ximian.com>

	* DataContractExporter-new.cs : do not expect contract attribute on
	  dictionary map. Non-contract type also uses this.

2010-04-05  Atsushi Enomoto  <atsushi@ximian.com>

	* SerializationMap.XsdExporter.cs, DataContractExporter-new.cs :
	  handle schema export for SharedTypeMap.

2010-04-05  Atsushi Enomoto  <atsushi@ximian.com>

	* KnownTypeCollection.cs, SerializationMap.cs : split SharedTypeMap
	  .ctor() and initialization. Fixed infinite loop for some
	  [Serializable] types (such as Assembly).

2010-04-02  Atsushi Enomoto  <atsushi@ximian.com>

	* DataContractSerializer : implement IsStartObject().

2010-03-12  Atsushi Enomoto  <atsushi@ximian.com>

	* KnownTypeCollection.cs, SerializationMap.cs :
	  some refactoring to implement MessageDescription.XmlName.

2010-03-04  Atsushi Enomoto  <atsushi@ximian.com>

	* SerializationMap.cs : return array instance if the runtime type is